feat(polygon-map): create a map using only Leaflet lib. Add coords form.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
-<div class="container">
-  <app-osm-map></app-osm-map>
-</div>
+<!--<div class="container">-->
+<!--  <app-osm-map></app-osm-map>-->
+<!--</div>-->
 
 
 <div class="container">
-<!--  <app-polygon-map></app-polygon-map>-->
+  <app-polygon-map></app-polygon-map>
 </div>
