--- a/src/app/polygon-map/polygon-map.component.html
+++ b/src/app/polygon-map/polygon-map.component.html
@@ -1,1 +1,9 @@
-<div class="map-container" leaflet [leafletOptions]="options"></div>
+<div #coords class="coords-block" [formGroup]="formGroupCoords">
+    <input type="number" placeholder="latitude" formControlName = 'latitude'>
+    <input type="number" placeholder="longitude" formControlName = 'longitude'>
+    <button (click)="addMarker()" [disabled]="formGroupCoords.invalid">add marker</button>
+</div>
+
+<div #map class="map-container">
+
+</div>
