feat(polygon-map): add coords form & addMarker method. Implementation of input of coordinates and choice of marker color in the form + method of add a marker to the map

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,5 @@
 
 
 <div class="container">
-  <app-polygon-map></app-polygon-map>
+  <app-polygon-map [center]="[48.5132, 32.2597]" [zoom]="14"></app-polygon-map>
 </div>
