feat(polygon-map): add drag & click callback methods for markers. When click or drag markers his coords change input-coords value

--- a/src/app/polygon-map/polygon-map.component.html
+++ b/src/app/polygon-map/polygon-map.component.html
@@ -4,11 +4,11 @@
   [formGroup]="formGroupCoords"
   (ngSubmit) = "addMarker()"
 >
-    <input type="number" placeholder="latitude" formControlName = 'latitude'>
+    <input type="number" placeholder="lat" formControlName = 'latitude'>q
 
-    <input type="number" placeholder="longitude" formControlName = 'longitude'>
+    <input type="number" placeholder="lng" formControlName = 'longitude'>
 
-    <select [style.background-color]= markerColorControl.colorValue  formControlName="markerColor">
+    <select [style.background-color]= markerColorControl.value.colorValue  formControlName="markerColor">
       <option *ngFor="let item of markersColorList" [ngValue]="item"  [style.background-color]= item.colorValue>{{ item.colorName }}</option>
     </select>
 
