feat(polygon-map): add create marker method + when add 2+ markers map fit them by zoom

--- a/src/app/polygon-map/polygon-map.component.html
+++ b/src/app/polygon-map/polygon-map.component.html
@@ -4,7 +4,7 @@
   [formGroup]="formGroupCoords"
   (ngSubmit) = "addMarker()"
 >
-    <input type="number" placeholder="lat" formControlName = 'latitude'>q
+    <input type="number" placeholder="lat" formControlName = 'latitude'>
 
     <input type="number" placeholder="lng" formControlName = 'longitude'>
 
