feat(polygon-map): add draw control map have ability to draw on some polygons

--- a/src/app/polygon-map/polygon-map.component.scss
+++ b/src/app/polygon-map/polygon-map.component.scss
@@ -1,3 +1,5 @@
+//@import url('https://unpkg.com/leaflet@1.5.1/dist/leaflet.css');
+
 :host {
   &::ng-deep {
     .markers-select-panel-red.mat-mdc-select-panel {
