feat(polygon-map): add ability to save draw figures in localStorage. Ability to save markers, polygons etc. as geojson, save to local storage, and after reload have ability to load that data from local storage.

--- a/src/app/polygon-map/polygon-map.component.html
+++ b/src/app/polygon-map/polygon-map.component.html
@@ -13,7 +13,11 @@
     </select>
 
     <button type="submit" [disabled]="!formGroupCoords.valid">add marker</button>
+
+
 </form>
+
+<button (click)="save()">Save</button>
 
 <div #map class="map-container">
 
