feat(polygon-map): combine methods for creating drawn markers + coords markers. icons of markers of the same type. ability to select the color of the marker when creating

--- a/src/app/polygon-map/polygon-map.component.html
+++ b/src/app/polygon-map/polygon-map.component.html
@@ -2,6 +2,8 @@
 <app-coords-markers
   [colorList] = markersColorList
   [map] = myMap
+  (emitMarker)="addMarker($event)"
+  (emitColorMarker)="colorMarker($event)"
 ></app-coords-markers>
 <div #map class="map-container">
 
