feat(polygon-map): add @Input param markerCoordinates. changing coordinate values in form fields

--- a/src/app/polygon-map/polygon-map.component.html
+++ b/src/app/polygon-map/polygon-map.component.html
@@ -2,8 +2,9 @@
 <app-coords-markers
   [colorList] = markersColorList
   [map] = myMap
+  [markerCoords]="markerCoordinates"
   (emitMarker)="addMarker($event)"
-  (emitColorMarker)="colorMarker($event)"
+  (emitColorMarker)="getColorMarker($event)"
 ></app-coords-markers>
 <div #map class="map-container">
 
