feat(coords-marker): add ability to paste (Ctrl + V) coordinates in field form.

--- a/src/app/coords-markers/coords-marker.component.html
+++ b/src/app/coords-markers/coords-marker.component.html
@@ -4,9 +4,19 @@
   [formGroup]="formGroupCoords"
   (ngSubmit) = "addMarker()"
 >
-  <input type="number" placeholder="lat" formControlName = 'latitude'>
+  <input
+    type="number"
+    placeholder="lng"
+    formControlName = 'longitude'
+    (paste)="pasteCoords($event)"
+  >
 
-  <input type="number" placeholder="lng" formControlName = 'longitude'>
+  <input
+    type="number"
+    placeholder="lat"
+    formControlName = 'latitude'
+    (paste)="pasteCoords($event)"
+  >
 
   <select
     [style.background-color]= markerColorControl.value.colorValue
