--- a/src/app/polygon-map/polygon-map.component.scss
+++ b/src/app/polygon-map/polygon-map.component.scss
@@ -23,6 +23,7 @@
         border-radius: 3rem 3rem 0;
         transform: rotate(45deg);
         border: 2px solid;
+        opacity: 0.6;
       }
     }
   }
