feat: add export-import-data component should have ability save drawn items to file

--- a/src/app/polygon-map/polygon-map.component.html
+++ b/src/app/polygon-map/polygon-map.component.html
@@ -1,9 +1,18 @@
+<div class="header-map">
+  <app-coords-markers
+    [colorList] = markersColorList
+    [map] = myMap
+    [markerCoords]="markerCoordinates"
+    (emitMarker)="addMarker($event)"
+    (emitColorControl)="getColorControl($event)"
+  ></app-coords-markers>
 
-<app-coords-markers
-  [colorList] = markersColorList
-  [map] = myMap
-  [markerCoords]="markerCoordinates"
-  (emitMarker)="addMarker($event)"
-  (emitColorControl)="getColorControl($event)"
-></app-coords-markers>
+  <app-export-import-data
+    [map] = myMap
+    [mapItems]="drawnItems"
+  ></app-export-import-data>
+</div>
+
+
+
 <div #map class="map-container"></div>
