--- a/src/app/coords-markers/coords-marker.component.scss
+++ b/src/app/coords-markers/coords-marker.component.scss
@@ -1,10 +1,8 @@
 :host {
   display: flex;
   flex-direction: column;
-  position: absolute;
-  left: 50px;
-  top: 10px;
-  z-index: 1000;
+  // position: absolute;
+  z-index: 500;
 
   .coords-block {
     display: flex;
