--- a/src/app/polygon-map/polygon-map.component.scss
+++ b/src/app/polygon-map/polygon-map.component.scss
@@ -27,6 +27,15 @@
       }
     }
   }
+  .header-map {
+    display: flex;
+    justify-content: left;
+    gap: 100px;
+    position: absolute;
+    z-index: 500;
+    left: 50px;
+    top: 10px;
+  }
   .map-container {
     width: 100%;
     height: 100%;
