feat(export-import-data): add import file method

--- a/src/app/export-import-data/export-import-data.component.html
+++ b/src/app/export-import-data/export-import-data.component.html
@@ -7,11 +7,14 @@
   </a>
 </div>
 <div class="export-import-btn">
-  <a
-    #importBtn
-    (click)="import()"
-  >
+  <label class="upload-btn">
     IMPORT
-  </a>
+    <input
+      type="file"
+      multiple
+      hidden
+    (change)="import($event)"
+    />
+  </label>
 </div>
 
