--- a/src/app/export-import-data/export-import-data.component.scss
+++ b/src/app/export-import-data/export-import-data.component.scss
@@ -25,9 +25,22 @@
       box-shadow: 1px 2px 3px;
     }
     a:visited {
-      color: pink;
+      color: black;
       background-color: transparent;
       text-decoration: none;
+    }
+
+    .upload-btn {
+      border-radius: 4px;
+      background-color: seagreen;
+      padding: 2px;
+      opacity: 0.8;
+
+      &:hover {
+        cursor: pointer;
+        opacity: 1;
+        box-shadow: 1px 2px 3px;
+      }
     }
   }
 }
