--- a/src/app/polygon-map/polygon-map.component.html
+++ b/src/app/polygon-map/polygon-map.component.html
@@ -10,6 +10,7 @@
   <app-export-import-data
     [map] = myMap
     [mapItems]="drawnItems"
+    (fileToImport) = getImportFile($event)
   ></app-export-import-data>
 </div>
 
